2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* data/Makefile.am:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/test-uri.c:
	* src/yelp-base.c:
	* src/yelp-cache.c:
	* src/yelp-cache.c:
	* src/yelp-cache.h:
	* src/yelp-db2html.c:
	* src/yelp-error.h:
	* src/yelp-history.c:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-info.c:
	* src/yelp-main.c:
	* src/yelp-man.c:
	* src/yelp-scrollkeeper.c:
	* src/yelp-section.c:
	* src/yelp-uri.c:
	* src/yelp-uri.h:
	* src/yelp-view-content.c:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Merging transformation-playground

2003-11-29  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Filled in just a little more to show how it works, so that I can
	  get somebody else to write this file for me.

2003-11-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make the sidebar disappear for no-sidebar pages.

2003-11-29  Shaun McCance  <shaunm@gnome.org>

	* data/Makefile.am:
	* data/toc.xml:
	* po/POTFILES.in:
	- Added the TOC XML file.

2003-11-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Don't leak GErrors.
	- Report an error in the error signal callback.

2003-11-28  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Switched to a different bit of the libxml2 API to parse the document.
	- Made page_id default to "index" when frag_id == NULL.

	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Implemented yelp_uri_is_page.

	* src/yelp-toc-pager.c:
	- Implemented resolve_uri.
	- Finished parsing of TOC, just need to write the pages.
	- Began work on indexing stuff.

	* src/yelp-uri.c:
	- Fixed memory corruption.

	* src/yelp-window.c:
	- Added callbacks for error and finish signals.
	- Made the TOC go through window_handle_pager_uri.
	- Switched to yelp_pager_uri_is_page in page callback.

2003-11-12  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- Add yelp-error.[ch] to SOURCES for test-pager.

	* src/yelp-error.h:
	- Add YELP_ERROR_FAILED_TOC.
